[package]
name = "dommer"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"

[workspace]
members = [
    ".",
    "./examples/simple"
]

[dependencies]
wasm-bindgen = { path = "../wasm-bindgen" }
js-sys = { path = "../wasm-bindgen/crates/js-sys" }
bitflags = "1"
http = "0.1"

[dependencies.web-sys]
path = "../wasm-bindgen/crates/web-sys"
features = [
    "console",
    "Window",
    "Document",
    "Node",
    "NodeList",
    "Element",
    "HtmlElement",
    "DomRect",
    "DomRectList",
    "Text",
    "Event",
    "EventTarget",
    "EventListenerOptions",
    "AddEventListenerOptions",
    "Request",
    "RequestInit",
    "ReferrerPolicy",
]
